# VIO_Course_YWY

./: readme.md
ch1/: CMakeLists.txt  ch1_rotation.cpp  ch1_rotation_handmade.cpp  ch1_rotation_use_libs.cpp  readme.md
ch1/ch1_code/: ch1_rotation_handmade.cpp
ch2/: readme.md
ch2/ch2_code/ros_sim_ws/src/vio_data_simulation-ros_version/src/: imu.cpp  param.h
ch2/ch2_code/vio_sim_ws/src/vio_data_simulation/python_tool/: GeometryLib.py  draw_points.py
ch2/ros_sim_ws/src/vio_data_simulation-ros_version/: README.md
ch2/vio_sim_ws/src/vio_data_simulation/: CMakeLists.txt
ch2/vio_sim_ws/src/vio_data_simulation/main/: gener_alldata.cpp
ch2/vio_sim_ws/src/vio_data_simulation/src/: imu.cpp  param.cpp  param.h
ch3/: readme.md
ch3/CurveFitting_LM/app/: CurveFitting.cpp
ch3/CurveFitting_LM/backend/: problem.cc  problem.h
ch3/CurveFitting_LM/data/: alg1_lambda_data.txt  draw_data.py  hello_world.py  new_lambda_data.txt
ch3/ch3_code/CurveFitting_LM/app/: CMakeLists.txt  newCurveFitting.cpp
ch3/ch3_code/CurveFitting_LM/backend/: problem.cc
ch3/ch3_code/CurveFitting_LM/data/: alg3_lambda_data.txt
ch4/ch4_code/nullspace_test/: hessian_nullspace_test.cpp
ch5/hw_course5_new/app/: TestMonoBA.cpp
ch5/hw_course5_new/backend/: edge_prior.cpp  problem.cc
ch6/course6_hw/: triangulate.cpp
ch7/: readme.md
